# seafile

./: configure.ac
controller/: Makefile.am  application.c  application.h  seafile-controller.c  seafile-controller.h
debian/: changelog
httpserver/: httpserver.c  upload-file.c
server/: seaf-server.c
server/gc/: seafserv-gc.c
tests/basic/: test-c10k.sh
web/: test-c10k.py
